sooy transparency update

--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -886,28 +886,48 @@
                 <strong>Explanation</strong>
             </summary>
             <p>
-            In conversation, Sooy shows a command of details and a willingness to defend trade-offs, often grounding answers in the mechanics of projects, 
-            ordinances, or finance rules. That clarity is valuable, but what rounds out a strong campaign is how accessible that clarity becomes to the public.
+            Part 1 — The Model for Cooperative Transparency
             <br>
             <br>
-            Over the past few weeks, he has taken visible steps in that direction. He’s scheduled a second appearance on the InformTheVoteNJ Radio Hour 
-            (9/21), sat down for a separate interview with content creator JT Burks, is planning a meet-and-greet event open to all candidates, and 
-            will attend a second candidates’ forum at the Four Seasons living community. These activities broaden the ways voters can hear directly 
-            from him beyond City Hall and long meetings.
+            If every candidate had done what Joe Sooy did, InformTheVoteNJ wouldn’t have needed to be such a persistent nudge. Sooy has consistently been 
+            one of the most accessible and forthcoming candidates in Millville’s political landscape. He provided detailed written responses, sat for 
+            multiple interviews—including early and mid-season radio appearances—and maintained open lines of communication throughout the campaign. 
+            In fact, he has participated in InformTheVoteNJ programming even during off-election years, long before announcing his current run.
             <br>
             <br>
-            Millville’s political culture often looks contentious on camera, and Sooy doesn’t shy from that. He argues open debate is part of 
-            accountability—even when bluntness is labeled as “mean.” By pairing that willingness to engage with more structured outreach, he is starting 
-            to make his transparency and process-based approach visible in settings where residents aren’t tuning in to full meetings or multi-hour interviews.
+            He attended the Four Seasons Forum, the Housing Authority event, and the recorded Candidates Forum, missing only the InformTheVoteNJ Meet & 
+            Greet due to illness. His continued social media activity—promoting events, sharing updates, and engaging with residents—demonstrates ongoing 
+            attentiveness and public presence. In terms of responsiveness, preparation, and direct engagement with voters and the press, Sooy’s campaign 
+            ranks among the most consistently transparent this cycle.
             <br>
             <br>
-            From an InformTheVoteNJ standpoint, Sooy currently rates above average, for transparency and accessibility because he engages 
-            directly and 
-            provides detailed answers. With the planned public events and additional media appearances, he’s moving closer to “top tier.” The remaining 
-            steps are classic, proactive transparency markers in 2025: creating his own comprehensive campaign website—rather than relying on press 
-            coverage—and clarifying ticket or slate affiliations (especially after the recent plane banner over the Millville football game raised questions 
-            about whether he, McGinty, and Gregoire are <strong>formally</strong> running together). Taking those actions would signal a full embrace of the higher standard 
-            of openness now expected in Cumberland County campaigns.
+            Part 2 — The Fair and Hard-Edged Assessment
+            <br>
+            <br>
+            To be comprehensive, it’s worth addressing both the perception and structure around his campaign. Sooy is sometimes labeled as one of the 
+            “mean guys” on the current commission—a framing that’s circulated through local rumor and social media more than through verifiable reporting. 
+            While he has made posts that some might find combative, he’s also publicly confronted that label in interviews, discussing the balance between 
+            bluntness and accountability. Observations from public meetings support that his exchanges are sometimes reactions to provocation rather than 
+            spontaneous hostility. In personal and professional interactions, he has remained polite, punctual, and cooperative.
+            <br>
+            <br>
+            Still, the broader communication structure of his campaign leaves some open questions. Like several others in the field, Sooy does not maintain a 
+            dedicated campaign website beyond social media. He had considered organizing a centralized candidate meet-and-greet before learning that 
+            InformTheVoteNJ was already planning one—demonstrating initiative, but also illustrating how ad-hoc the local campaign culture remains. 
+            The “Gregoire question” applies here too: If this voter-information project hadn’t existed, how much of Sooy’s message would have reached the 
+            public? His transparency has been strong through participation, but it’s still potentially partially dependent on platforms made available to him rather 
+            than built by his own campaign infrastructure.
+                <br>
+            <br>
+            Ultimately, Sooy represents both the promise and the paradox of Millville’s evolving transparency culture. He’s done nearly everything within 
+            reach to engage openly—radio, forums, Q&A—but still operates in an environment without modern standardized systems for candidate communication. 
+            His willingness to show up, answer difficult questions, and maintain dialogue sets him apart from the crowd; yet the absence of institutional 
+            norms means even his high effort can’t fully close the information gap for voters.
+                <br>
+            <br>
+            Overall rating: Above Average (Approaching Top Tier) — one of the most consistent and cooperative candidates in the field, but still 
+            limited by the lack of formal campaign infrastructure and a civic culture where transparency depends more on individual initiative than 
+            systemic expectation.
             </p>
         </details>
         </div>
