summers transparency update

--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -555,7 +555,7 @@
         <br>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A bit Above Average (Trending Upwards) </h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A bit Above Average (Developing) </h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
@@ -564,19 +564,33 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-                David Summers is a first-time candidate who has shown consistent signs of accessibility and openness. His initial interviews with InformTheVoteNJ were brief but cordial, giving 
-                voters a basic sense of his background and priorities. He has since continued co-hosting a weekly call-in radio show with Robert McQuade, where residents can ask questions live — 
-                a clear signal of ongoing engagement.
-                <br><br>
-                Summers has also taken further steps this fall. He attended the recent InformTheVoteNJ meet-n-greet, is scheduled for a full radio interview on 10/14, and has committed to attending 
-                the Candidate Forum at the Millville Public Library this Saturday. In addition, he proactively invited InformTheVoteNJ to do a walkthrough of his day job to expand on his platform, 
-                showing a willingness to open up his workplace and provide more context about his skills and approach.
-                <br><br>
-                If all of those commitments continue alongside his weekly radio presence, it would be difficult to argue that Summers isn’t doing everything reasonably possible to be transparent 
-                and accessible. At that point, any remaining perceived deficiencies would be less about his own choices and more reflective of the broader city and county election norms that limit 
-                voter access to information.
-                <br><br>
-                Given these factors, Summers currently holds an <strong>“Above Average (Poised for Top-Tier)”</strong> transparency rating. 
+                David Summers has made a strong first-time showing as a candidate who genuinely values openness and community dialogue. From the beginning of 
+                campaign season, he demonstrated a willingness to engage, first through introductory interviews with InformTheVoteNJ, then by co-hosting the 
+                weekly “Talk Around Millville” call-in radio show with Robert McQuade on WVLT 92.1 FM. That program alone offers the kind of real-time public 
+                access that few candidates ever create—allowing residents to call in directly and hear his views week after week.
+            <br><br>
+                Summers also attended major public events, including the Four Seasons Forum, the InformTheVoteNJ Meet & Greet, and likely the Housing 
+                Authority event. His outreach extended beyond traditional campaign activities—inviting InformTheVoteNJ to do a walkthrough of his workplace 
+                to help contextualize his professional background and problem-solving approach (though for political reasons, Nipro has requested the interview 
+                occur after the election). These steps show initiative, authenticity, and a personal 
+                investment in transparency that goes well beyond minimal participation.
+            <br><br>
+                That said, there were a few late-season missteps characteristic of first-time candidates. Summers cancelled his appearance at the recorded 
+                Candidates Forum to create his new Facebook campaign page—an understandable decision in the moment but an unforced error in retrospect. 
+                Waiting until the end of campaign season to build an online presence meant that the scheduling conflict cost him a valuable opportunity to 
+                reach voters in a structured, recorded format. In a 2025 campaign environment, both a campaign website and an active Facebook page are now 
+                considered baseline tools for voter communication.
+            <br><br>
+                There’s also a bit of perceptible hesitation with public speaking. During the InformTheVoteNJ radio interview, some of that shyness showed 
+                through—not in a negative way, but in a way that suggests he’s still adjusting to the scrutiny and pressure that come with public office. 
+                These are all normal growing pains for a first-time candidate, and they don’t outweigh his genuine effort and responsiveness.
+            <br><br>
+                Ultimately, Summers’ record reflects both promise and potential. His engagement with radio, community events, and follow-through on outreach 
+                requests clearly place him above the local baseline. But his campaign also illustrates the learning curve facing new candidates in Cumberland 
+                County—where timing, consistency, and confident public presentation can make all the difference.
+            <br><br>
+                Overall rating: A Bit Above Average (First-Time Candidate) — strong effort, authentic engagement, and visible accessibility tempered by 
+                late-season logistical errors and room to grow in structured outreach.
         </details>
 
     </div> 
