branin transparency update

--- a/child_pages/cc-elections/Candidates/branin.html
+++ b/child_pages/cc-elections/Candidates/branin.html
@@ -164,20 +164,35 @@
     <h4 class="quick-sum">Rating Explanation</h4>
     <h6 class="page-title">Newell Branin</h6>
     <p>
-      Branin began the campaign with a Facebook page and one campaign-related statement, but without a central campaign site, issue sections, or long-form interviews. Early appearances included a 
-      fundraiser-type event shared with two other candidates, which by nature limited broader voter access and raised questions about whether the three were quietly running as a slate. He also 
-      attended the 4 Seasons candidate forum, which unfortunately did not allow filming.
+      Newell Branin’s campaign has remained visible in person but underdeveloped in structure. He has attended multiple community events, including the Four 
+      Seasons Forum and the InformTheVoteNJ Meet & Greet, and likely the Housing Authority event. Those appearances demonstrate approachability and local 
+      engagement—valuable traits in a crowded field. However, without a centralized campaign site, detailed issue statements, or campaign focused long-form 
+      recorded content, 
+      most of what voters know about him comes through brief encounters rather than a lasting election focused record.
       <br><br>
-      Since then, Branin has shown a modest step forward by attending the recent InformTheVoteNJ meet n greet at Glasstown Brewery, which provided genuine face-to-face accessibility. That is a 
-      meaningful positive in a cycle where many candidates remain largely invisible. However, Branin (along with Sherman Taylor) has also declined to participate in the only recorded candidate 
-      forum scheduled this season. While it is understandable given the late organization, the absence means voters still lack a comprehensive record of his agenda and issue positions.
+      Early in the season, Branin’s campaign consisted primarily of a Facebook page and limited written messaging. Since then, there has been little 
+      substantive digital activity beyond promoting the brewery Meet & Greet and a fundraiser. A Google search reveals that he serves as President of the Millville Soccer 
+      Association Board and is active as a council member at his Evangelical Lutheran Church—further evidence of his community roots—but these roles are 
+      background context, not campaign outreach.
       <br><br>
-      The broader dilemma here is potentially structural: with few truly public-facing events in Millville’s election season, accountability gaps persist. Should candidates like Branin themselves organize 
-      multiple neutral forums? Should citizens or county institutions step in? In practice, Branin’s current visibility remains limited and shaped more by outside invitations than proactive 
-      campaign transparency.
+      Interestingly, the same search shows that Branin has participated in several QBC interviews with Jim Quinn. Those appearances are noteworthy, but 
+      they also highlight the distinction between general local media and election-focused coverage. Quinn’s platform, while valid and community-oriented, 
+      is less focused on electoral accountability compared to the structured, issue-based format of InformTheVoteNJ. If Branin wanted those QBC appearances 
+      to count toward transparency, it would have been simple—and effective—to share the specific interview links for inclusion in this repository. That 
+      step alone would have strengthened his campaign’s traceable record.
       <br><br>
-      Rating: Developing (with tentative progress). One possible path to raise this rating, Branin would need to consolidate his campaign message into a publicly accessible platform (website or detailed issue 
-      statements) and appear in at least one long-form recorded setting.
+      This example underscores a recurring theme in Millville’s 2025 election cycle: candidates often rely on fragmented exposure rather than coordinated 
+      press collaboration. It’s not enough to assume that voters will stumble across content buried on other pages or platforms. When information is 
+      scattered across Facebook groups, small YouTube channels, or local radio segments, it becomes invisible to newer voters or those trying to make 
+      informed comparisons. Campaigns have a responsibility to consolidate what’s out there—or, at minimum, ensure that credible local outlets receive 
+      it directly.
+      <br><br>
+      Branin, like several others in the race, appears to be well known and generally well liked among people already “in the loop.” But for residents who 
+      are new to local politics or prefer to review their election choices in a centralized, verifiable way, there’s little to evaluate. His accessibility 
+      in person is genuine, but his campaign transparency remains limited by lack of follow-through and coordination.
+      <br><br>
+      Overall rating: Developing — personable and civically active, but reliant on scattered exposure rather than structured transparency. Better 
+      coordination with press outlets and a centralized campaign presence would elevate his accessibility to the standard voters now expect.
       <br><br>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
     </p>
