green transparency update

--- a/child_pages/cc-elections/Candidates/green.html
+++ b/child_pages/cc-elections/Candidates/green.html
@@ -385,7 +385,7 @@
     <br>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (Trending Up)</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A Bit Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
@@ -394,20 +394,32 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-            Rachel Green has taken notable steps to inform voters by launching a full campaign website and participating in an interview with JT Burks. This already placed her above the status 
-            quo in Cumberland County, where many candidates continue to rely on scattered social media posts or sporadic press mentions.
+            Rachel Green entered the Millville City Commission race with a solid early advantage in transparency. She launched a dedicated campaign website 
+            and participated in an interview with J.T. Burks, immediately placing her above the local baseline where many candidates still rely on minimal 
+            Facebook activity or unrecorded appearances. The decision to build a site at all—rather than treating social media as the only communication 
+            channel—showed foresight and a respect for voters who prefer structured, easily navigable information.
             <br><br>
-            Since that baseline, Green has also attended the recent InformTheVoteNJ meet-and-greet, a positive sign of willingness to show up in public and interact with voters and press directly. 
-            She is also a tentative “maybe” for the upcoming Millville Public Library forum. If she participates in that kind of recorded, structured event, it would mark a clear advance in 
-            transparency, since voters would gain access to unfiltered, on-the-record messaging.
+            Over the course of the campaign, Green maintained steady visibility. She attended the Four Seasons Forum, the InformTheVoteNJ Meet & Greet, 
+            and likely the Housing Authority event. However, she seemingly opted to attend the No Kings rally rather than the recorded Candidates Forum, which was 
+            the only opportunity this cycle for a public, on-the-record comparison between candidates. Her attendance choices suggest a prioritization of 
+            broader community engagement over structured press formats—understandable, but strategically limiting from a transparency standpoint.
             <br><br>
-            At the same time, assessing her overall accessibility remains somewhat murky. She is present and available in certain settings, but has not yet committed to additional long-form 
-            interviews or hosted her own clearly advertised public events. This creates a “fog” where voters can see she is around and reachable, but it is difficult to distinguish her personal 
-            engagement from broader city/county election coordination.
+            Her campaign website, while professionally presented, remained somewhat surface-level in its messaging. It effectively communicated values and 
+            priorities, but stopped short of offering concrete policy detail or implementation plans. A follow-up long-form interview could have unpacked 
+            these topics further—clarifying how her ideas would translate into action at City Hall. Without that deeper layer of dialogue, the campaign’s 
+            messaging feels polished but thin, more about general direction than transformative plans ready on day one.
             <br><br>
-            Given these factors, Green currently sits at an “Above Average (with potential to trend upward)” transparency rating. Her rating would theoretically solidify at a higher tier with 
-            direct participation in 
-            more pressing, detail-oriented interview formats and consistent public-facing events that give voters accessible, accountable insight into her platform.
+            Her Facebook campaign page also saw little new substantive content in the final weeks before the election. While a Google search reveals another 
+            interview and a few smaller media appearances, this illustrates a recurring problem seen with other candidates like Kott and Branin: when new 
+            content isn’t shared directly with voter-information projects like InformTheVoteNJ, it risks getting lost in the noise of campaign season. 
+            For voters trying to make informed decisions, accessibility isn’t just about producing content—it’s about ensuring that content is clearly 
+            delivered and consolidated in places where people actually look for it.
+            <br><br>
+            Overall, Rachel Green’s campaign demonstrates strong presentation and a visible commitment to public engagement but stops short of full 
+            transparency in the press sense—where clarity, depth, and direct media collaboration matter as much as event attendance.
+            <br><br>
+            Overall rating: A Bit Above Average (Stable) — strong start, consistent presence, and professional presentation, but limited depth and coordination 
+            left her campaign more visible than truly transparent.
         </details>
     </div> 
        
