romanik transparency update

--- a/child_pages/cc-elections/Candidates/romanik.html
+++ b/child_pages/cc-elections/Candidates/romanik.html
@@ -173,27 +173,39 @@
               <h4 class="quick-sum">Rating Explanation</h4>
               <h6 class="page-title">Benjamin Romanik</h6>
               <p>          
-                Mayor Ben Romanik stands out for his everyday accessibility. He is consistently present at City Hall meetings, approachable before and after sessions, engaged at community events, 
-                and a familiar face at the bi-weekly Republican breakfasts. His reputation as personable and easy to talk to is well-earned, and he extends that accessibility into the wider 
-                region through his attendance at governmental and political meetings.
+                Mayor Ben Romanik remains one of the most visibly present figures in Millville public life. He regularly attends City Hall meetings, 
+                community events, and civic gatherings—often engaging residents directly before and after sessions. His presence extends beyond city limits 
+                to regional meetings and Republican breakfasts, where he is approachable and well-known among colleagues and constituents alike. That level 
+                of daily accessibility goes a long way in establishing personal rapport and trust within the community.
                 <br>
                 <br>
-                Campaign participation has also been notable in some respects. Romanik attended the InformTheVoteNJ meet-n-greet, committed to the upcoming candidate forum which will be recorded for 
-                the public to view, and sat down for 
-                a full radio interview—three important steps that not all candidates in this cycle have taken. These moves demonstrate a willingness to show up in front of voters and engage 
-                through press channels.
+                From a campaign standpoint, Romanik has participated in multiple key voter-access events: he attended the InformTheVoteNJ Meet & Greet, 
+                made a brief appearance at the recorded Candidates Forum, and completed a radio interview on WVLT. These actions place him above the local 
+                baseline—particularly in a field where several candidates almost declined participation altogether.
                 <br>
                 <br>
-                However, the surrounding context makes the picture more complicated. Leading up to the radio interview, there was little correspondence or coordination, which left the discussion 
-                more improvised than structured. As a result, the content blurred between “casual conversation” and “focused campaign interview,” leaving some uncertainty about how clear the 
-                messaging truly was. Similarly, while Romanik has participated in events I’ve hosted, it remains unclear whether anyone else would have organized or advertised meet-and-greets 
-                or forums, something that ought to be organized by the city or a well established press outlet. That raises questions about the degree of planning behind his campaign visibility, 
-                and how confident voters can be in receiving consistent, campaign-focused 
-                information, not just about him, but about all the candidates in a very crowded race.
+                However, his campaign strategy also reflects a level of informality that leaves some gaps in structured transparency. Romanik was the only 
+                major candidate absent from the Four Seasons Forum (reportedly for understandable reasons), and while he may have been present at the Housing 
+                Authority event, there’s no clearly documented record of attendance or remarks. More notably, he has no comprehensive campaign website, and 
+                coordination ahead of his WVLT interview was minimal—resulting in a conversation that drifted between community storytelling and focused 
+                campaign discussion. While it was personable and engaging, it lacked some of the structure that would help voters clearly identify his agenda, 
+                plans, and distinctions from other candidates in such a crowded race.
                 <br>
                 <br>
-                Taken together, these factors justify a rating of “A Bit Above Average.” Romanik’s community presence and willingness to participate in select campaign events lift him above the 
-                local status quo, but the lack of consistent planning, coordination, and clearly advertised campaign efforts leaves voters with less certainty than they should reasonably expect.
+                The broader question isn’t whether Romanik is accessible—he absolutely is—but how effectively that accessibility translates into clear, 
+                public-facing campaign communication. In a smaller race, his “show up and talk to people” approach might suffice. But in a 19-candidate 
+                election, and especially as a sitting mayor, there’s an elevated expectation for modeling best practices. The absence of a well-organized 
+                campaign infrastructure—website, scheduled public Q&A, consistent press coordination—means that many voters will rely on word-of-mouth 
+                rather than durable, shareable information.
+                <br>
+                <br>
+                Romanik ultimately “squeaks a bit above” the status quo on transparency because his community visibility compensates for organizational gaps. 
+                But from a strategic and civic example standpoint, that’s a missed opportunity. In a year defined by competitive campaigning and calls for 
+                higher transparency standards, the mayor’s campaign didn’t quite set the bar—it met it just enough to stay above average.
+                <br>
+                <br>
+                Overall rating: A Bit Above Average (Stable) — high community presence and approachability offset by a lack of structured communication and 
+                proactive campaign organization.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
