mcginty transparency update

--- a/child_pages/cc-elections/Candidates/mcginty.html
+++ b/child_pages/cc-elections/Candidates/mcginty.html
@@ -344,40 +344,40 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-            <p><strong>Why he lands here:</strong><br>
-                Right out of the gate, Thomas McGinty answered my questionnaire, had already completed a 2.5-hour podcast interview, and quickly booked a full radio hour 
-                through my platform. From those touchpoints alone, I can form a solid picture of his background (geologist / hazardous-site mitigation), overall vision 
-                (remediation & redevelopment), an actionable agenda (Wheaton/brownfields, public safety, code enforcement), and early stances on key issues. That’s more 
-                engagement and usable substance than I typically get at this stage from first-time or lesser-known candidates.</p>
-                <br>
-                <br>
-                <p><strong>Context that matters:</strong><br>
-                We’re reaching a point where the gap between “average,” “above average,” and “top-tier” is shaped as much by the Cumberland County status quo as by any one 
-                candidate’s effort. If campaigns rarely advertise meet-and-greets or fair appearances, there’s less to attend. If there’s no standard candidate forum or 
-                debate at the school board/city/county levels, no one can show up for it. And if winning candidates routinely skip publishing clear issue pages or agendas, 
-                it’s unrealistic to expect new contenders to roll out state-level, fully sourced platforms on day one.</p>
-                <br>
-                <br>
-                <p><strong>What would move McGinty to “Top-Tier” transparency here:</strong></p>
-                <ul style="margin-top:0;">
-                    <li><strong>Central hub:</strong> Publish a clean campaign site with résumé, <em>issue-by-issue</em> pages, and concise summaries linked to source materials (reports, ordinances, statutes, data).</li>
-                    <li><strong>Public calendar:</strong> Proactively post upcoming appearances (forums, meet-and-greets, radio/podcasts) and archive past events with links/clips.</li>
-                    <li><strong>Open Q&amp;A:</strong> Participate in any neutral forum offered; if none exists, host a basic town-hall/Q&amp;A and accept neutral moderation.</li>
-                    <li><strong>Document the record:</strong> Keep a page of questionnaires answered, interviews completed, and one-page stance summaries (downloadable PDF for voters).</li>
-                    <li><strong>Specifics &amp; follow-through:</strong> Translate themes into timelines/metrics (e.g., Wheaton/brownfield milestones, blight/code-enforcement benchmarks, youth-program partners).</li>
-                    <li><strong>Contact &amp; response norms:</strong> Publish contact methods and typical response windows; consider office hours.</li>
-                </ul>
-                <br>
-                <br>
-                <p><strong>What could slide him back toward “Average”:</strong><br>
-                If the initial burst of access fades, if action plans on youth/safety/blight remain vague, or if there’s no central, updated hub for voters to track positions 
-                and appearances, the rating would likely settle closer to the county norm.</p>
-                <br>
-                <br>
-                <p><strong>Bottom line:</strong><br>
-                McGinty currently clears the local bar for transparency and accessibility—decisively. He’s engaging, available, and substantive enough for voters to understand 
-                who he is and what he wants to do. He’s not yet at the polished, deeply sourced standard you might see from statewide figures (think Steven Fulop or Andy Kim), 
-                but with a public calendar, an issue hub, and measurable follow-through, he could get there.</p>
+            <p>Thomas McGinty has been one of the strongest and most consistent examples of transparency and engagement in Millville’s 2025 election cycle. 
+                From the beginning of the campaign, he demonstrated initiative and professionalism—responding promptly to outreach, completing the 
+                InformTheVoteNJ questionnaire early, participating in a full-length 2.5-hour podcast interview, and following up with a radio hour on WVLT. 
+                Those efforts alone provided voters with enough material to clearly understand his background, priorities, and working style—something that 
+                cannot be said for many other candidates in this crowded race.
+                <br><br>
+                McGinty’s platform has also been presented with substance and clarity. His background as a geologist specializing in hazardous-site 
+                mitigation connects directly to his campaign priorities: brownfield remediation, redevelopment, public safety, and code enforcement. His 
+                willingness to speak openly about specific properties and projects—like the Wheaton site—adds an action-oriented layer often missing from 
+                local politics. Moreover, he has been consistently active on social media, regularly engaging residents in policy discussions and campaign 
+                updates.
+                <br><br>
+                He attended the Four Seasons Forum, the Brewery Meet & Greet, and the recorded Candidates Forum, where he remained for the entire session. 
+                He likely attended the Housing Authority event as well. These actions 
+                demonstrate not just presence, but endurance—the willingness to stay in the room, listen, and answer difficult questions.
+                <br><br>
+                However, in the interest of fairness and systemic consistency, it’s worth considering the “Gregoire question”: What would the transparency 
+                picture look like if projects like InformTheVoteNJ didn’t exist? McGinty has been highly cooperative with this platform, but he does not have 
+                a dedicated campaign website, and he has himself remarked that social media is a terrible way to reach voters. Without a centralized public 
+                information effort, much of his strongest material—his interviews, long-form explanations, and recorded appearances—might have remained 
+                scattered, under-promoted, or lost in algorithmic noise.
+                <br><br>
+                This doesn’t diminish his individual effort—it highlights how even the most communicative and cooperative candidates are still operating inside 
+                a structurally weak civic system. There’s no standardized public campaign calendar, no recurring city-sponsored debate, and no clear expectation 
+                that candidates maintain uniform accessibility channels. McGinty’s strength lies in the fact that he’s been consistently engaged and 
+                responsive despite that vacuum. But the same qualities that make him “top-tier for Cumberland County” would barely register as adequate 
+                in a more modernized electoral environment where comprehensive websites, open Q&As, and structured policy hubs are standard.
+                <br><br>
+                In short, McGinty has done nearly everything right given the reality of the landscape. He’s engaged, cooperative, and willing to explain 
+                the details. But the same question that shadows even strong campaigns remains: Would voters still have clear access to this information if 
+                civic-minded intermediaries weren’t bridging the gap?
+                <br><br>
+                Overall rating: Above Average (High Performing Within Current System) — one of the most thorough and cooperative candidates this cycle, 
+                though his success still highlights how much Millville’s civic infrastructure relies on private efforts to make transparency possible.</p>
         </details>
     </div> 
 
